--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "element-ui": "^2.12.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
@@ -17,6 +18,7 @@
     "@vue/cli-service": "^3.11.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
+    "vue-particles": "^1.0.9",
     "vue-template-compiler": "^2.6.10"
   }
 }
